--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Securiy-Policy">
         <title>My Web</title>
+        <link rel="stylesheet" href="">
+        <link rel="-apple-system-icon" href="favicon.ico">
     </head>
     <body>
         <table style="padding-left:20px;table-layout: fixed;">
