--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Securiy-Policy">
         <title>My Web</title>
         <link rel="stylesheet" href="">
-        <link rel="-apple-system-icon" href="favicon.ico">
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <table style="padding-left:20px;table-layout: fixed;">
